--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 code_testing/
 .venv
 __pycache__/
-face_images/
+data/input/face_recog/face_images/
+data/input/face_recog/dataset/
+data/input/face_recog/dataset_split/
+data/input/face_recog/test/
