--- a/app/config.json
+++ b/app/config.json
@@ -1,4 +1,4 @@
 {
-    "BEST_SVM_THRESHOLD": 0.15151515151515152,
-    "BEST_COSINE_THRESHOLD": 0.24286592422474282
+    "BEST_SVM_THRESHOLD": 0.0,
+    "BEST_COSINE_THRESHOLD": 0.3621001091742842
 }
